add netlify adapter for next

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
+    "@netlify/plugin-nextjs": "^5.9.4",
     "@prisma/client": "latest",
     "@prisma/extension-accelerate": "latest",
     "next": "latest",
